@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-17T16:22:04Z",
+  "timestamp" : "2022-06-18T01:16:45Z",
   "count_outdated" : 339,
   "uniques_outdated" : 192,
-  "count" : 365,
-  "uniques" : 209,
+  "count" : 366,
+  "uniques" : 210,
   "clones" : [
     {
       "timestamp": "2022-06-04T00:00:00Z",
@@ -93,6 +93,13 @@
       "timestamp": "2022-06-16T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-17T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
