@@ -1,3 +1,10 @@
+2022-06-18T01:16:45Z:
+* notice: last 14d: unq all: 5 27
+* notice: prev accum: outdated-unq outdated-all / unq all: 192 339 / 209 365
+* notice: next accum: outdated-unq outdated-all / unq all: 192 339 / 210 366
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-06-17]
+
 2022-06-17T16:22:04Z:
 * notice: last 14d: unq all: 5 26
 * notice: prev accum: outdated-unq outdated-all / unq all: 191 338 / 209 365
